# lambda-haskell

./: .gitignore  CHANGELOG.md  Main.hs  default.nix  lambda-test.cabal  lambda-test.nix
.github/workflows/: ci.yaml
nix/: sources.json
